[gd_scene load_steps=3 format=3 uid="uid://6fbtgb3ma7jd"]

[ext_resource type="Script" path="res://src/champions/projectiles/Ability.gd" id="1_rfaht"]
[ext_resource type="Shape3D" uid="uid://dm7i4n3g6ttyl" path="res://src/champions/projectiles/colliders/sphere.tres" id="2_gwu3f"]

[node name="Ability" type="Area3D"]
script = ExtResource("1_rfaht")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = ExtResource("2_gwu3f")

[node name="Effect" type="Node" parent="."]

[node name="Duration" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]
